Warnungen und Code Smells entfernen